src/test/ui/asm/srcloc.stderr
error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:11:15
   |
LL |         asm!("invalid_instruction");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:15:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:20:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:26:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:33:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:38:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

